# ocaml

./: .bazelignore  .bazelrc  .bazelversion  .gitignore  BUILD.bazel  BUILD.config.bzl.in  MODULE.bazel  Makefile  OBAZL.adoc  OBAZL.bootstrap.adoc  OBAZL.notes  README.adoc  WORKSPACE.bazel  WORKSPACE.bzl  WORKSPACE.zig  configure  configure.ac  gtags.conf
asmcomp/: BUILD.bazel  BUILD_RULES.bzl  asmlibrarian.ml  cvt_emit.mll
asmcomp/amd64/: BUILD.bazel
asmcomp/arm/: BUILD.bazel
asmcomp/arm64/: BUILD.bazel
asmcomp/i386/: BUILD.bazel
asmcomp/power/: BUILD.bazel
asmcomp/riscv/: BUILD.bazel
asmcomp/s390x/: BUILD.bazel
boot/: BOOT_RULES.bzl  BUILD.bazel  BUILD_CHECKPOINT.bzl  BUILD_IMPORTS.bzl  BUILD_RULES.bzl  checkpoint_runner.sh  clean.sh  coldstart_runner.sh  ocamlc.byte.shell  ocamlc.sh  ocamlcc.boot.runner.sh  ocamllex.sh  ocamlopt.byte.runner.sh  setup_runner.sh
boot/baseline/: BUILD.bazel
boot/compiler/: BUILD.bazel
boot/lib/: BUILD.bazel
boot/menhir/: BUILD.bazel
boot/toolchain/: BUILD.bazel
boot/vm/: BUILD.bazel
bytecomp/: BUILD.bazel  bytelibrarian.ml  bytelink.ml  opcodes.json  opcodes.ml.mustache  opnames.ml.mustache
bzl/: BUILD.bazel  BUILD.bzl  camlheader.sh  functions.bzl  obazl-mode.el  providers.bzl  rules.bzl  transitions.bzl
bzl/EXTENSIONS/: BUILD.bazel  cc_config.bzl  config.bzl  xcode.sh
bzl/actions/: BUILD.bzl  RUNFILES.bzl  archive_impl.bzl  compile_test_impl.bzl  executable_impl.bzl  inline_expect_impl.bzl  lambda_expect_impl.bzl  lexer_impl.bzl  library_impl.bzl  module_compile_action.bzl  module_compile_config.bzl  module_compile_plus.bzl  module_impl.bzl  signature_compile_config.bzl  signature_compile_plus.bzl  signature_impl.bzl  tool_executable_impl.bzl
bzl/attrs/: archive_attrs.bzl  executable_attrs.bzl  executable_intf.bzl  lexer_attrs.bzl  library_attrs.bzl  module_attrs.bzl  signature_attrs.bzl
bzl/docs/: OBAZL.adoc  OBAZL.bootstrap.adoc  OBAZL.notes  bootstrapping.adoc  build_protocols.adoc  build_targets.adoc  build_variants.adoc  cc_toolchain_integration.adoc  cc_toolchains.adoc  compilerlibs.adoc  config.adoc  configuration.adoc  cross_compilation.adoc  debugging.adoc  dependencies.adoc  devguide.adoc  diagnostics.adoc  dynamics.adoc  dynlink.adoc  exceptions.adoc  libraries.adoc  logging.adoc  macros.adoc  ocaml_cc_config.adoc  output_groups.adoc  performance.adoc  platforms.adoc  preprocessing.adoc  primitives.adoc  protocols.adoc  queries.adoc  repl.adoc  rules.adoc  runtime.md  staged_builds.adoc  stdlib.adoc  terminology.adoc  test_rules.adoc  testing.adoc  tool_runners.adoc  (+5 more)
bzl/providers/: ocaml.bzl
bzl/rules/: BUILD.bzl  COMPILER.bzl  DEPS.bzl  baseline_module.bzl  baseline_signature.bzl  boot_archive.bzl  boot_attrs_executable.bzl  boot_camlheaders.bzl  boot_coldstart.bzl  boot_compiler.bzl  boot_config.bzl  boot_executable.bzl  boot_import_tool.bzl  boot_import_vm_executable.bzl  boot_lexer.bzl  boot_library.bzl  boot_module.bzl  boot_pack.bzl  boot_signature.bzl  boot_stdlib.bzl  bootstrap_archive.bzl  bootstrap_executable.bzl  bootstrap_library.bzl  bootstrap_module.bzl  bootstrap_ns.bzl  bootstrap_ns_library.bzl  bootstrap_ns_resolver.bzl  bootstrap_ocamlc.bzl  bootstrap_ocamllex.bzl  bootstrap_ocamlyacc.bzl  bootstrap_preprocess.bzl  bootstrap_repl.bzl  bootstrap_signature.bzl  bootstrap_test.bzl  build_module.bzl  build_tool.bzl  build_tool_executable_impl.bzl  cc_assemble.bzl  cc_preprocess.bzl  compiler_library.bzl  (+53 more)
bzl/toolchain/: BUILD.bazel  BUILD.bzl
bzl/transitions/: boot_transitions.bzl  cc_transitions.bzl  dev_transitions.bzl  identity.bzl  manifest.bzl  misc.bzl  ocaml_transitions.bzl  (+8 more)
compilerlibs/: BUILD.bazel  Makefile.compilerlibs
compilers/: BUILD.bazel
config/: BUILD.bazel  BUILD.bzl  BUILD_CC_LINK.bzl  BUILD_RULES.bzl  CONFIG.bzl.in  WARNINGS.bzl  config.initial.json  config.ml  config.ml.json  config.ml.json.in  config.ml.json.tplt  config.ml.json.tplt.in  config.ml.mustache  config.mustached.ml  config_build.ml.mustache  config_cc.ml.mustache  config_cc.tmp.json  config_cc.tmp.ml  config_cc_toolchain.ml.mustache  config_deploy.ml.mustache  config_sys.ml  config_sys.ml.mustache  config_sys_win.ml.in
debugger/: BUILD.bazel  ocamldebug.json  ocamldebug.ml.mustache
driver/: BUILD.bazel
file_formats/: BUILD.bazel
fixpoint/: BUILD.bazel
lambda/: BUILD.bazel  runtimedef.ml.mustache
lex/: BUILD.bazel  BUILD_RULES.bzl
middle_end/: BUILD.bazel
ocamltest/: BUILD.bazel  BZL.ocamltest.sh
parsing/: BUILD.bazel
promote/: BUILD.bazel
runtime/: BUILD.bazel  BUILD.md  addrmap.c  amd64.mustache.S  amd64.mustached.S  arm.S.mustache  arm64.S.mustache  arm64.mustache.S  arm64.pp.S  build_config.h.mustache  domain_state64.awked.inc  domain_state64.inc.mustache  dynlink.c  extract_primitives.c  i386.mustache.S  instrtrace.c  interp.c  ints.c.mustache  main.c  power.S.mustache  primitives.dat.mustache  primitives.gen_json.sh  primitives.h.mustache  primitives.json  prims.json  prims.mustache  prims.mustache.c  prims.out.c  riscv.mustache.S  s390x.S.mustache  startup_byt.c
stdlib/: BUILD.bazel  BUILD.bzl  BUILD.topdown  BUILD_RULES.bzl  BUILD_STDLIB.bzl  BZL.notes.txt  LABELS.json  array.mustache.mli  bytes.mli.mustache  camlheader.template  empty.json  expand_module_aliases.awk.FIXME  hashtbl.mli.mustache  hashtbl.mustache.mli  list.mustache.mli  map.mustache.mli  moreLabels.mustache.mli  set.mustache.mli  stdlib.json  stdlib.mli.mustache  stdlib.mustache.ml  string.mustache.mli
test/: BUILD.bazel  ocamlcc.sh  rules.bzl
testsuite/: BUILD.bazel  inline_expect.sh
toolchain/: BUILD.bazel  BUILD.bzl  transitions.bzl
tools/: BUILD.bazel  TOOL_RULES.bzl  TOOL_RUNNER.sh  TOOL_RUNNERS.bzl
toplevel/: BUILD.bazel  BUILD_RULES.bzl  repl_runner.sh
typing/: BUILD.bazel
utils/: BUILD.bazel  BUILD.bzl  config.common.ml  config.dev.ml  config.dev.ml.in  config_ml.generated  domainstate.ml.generated  domainstate.mli.generated  domainstate.mustache.ml  domainstate.mustache.mli  warnings.json  warnings.ml.mustach
yacc/: BUILD.bazel  BUILD_RULES.bzl  closure.c
(+1056 files in other folders)
