load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_skylib//rules:common_settings.bzl",
     "bool_flag", "string_flag")

load("//bzl:rules.bzl", "run_tool", "run_repl")

exports_files(["Makefile.config", "VERSION", "BUILD.bazel"])

label_flag(name = "arg", build_setting_default = "BUILD.bazel")

bool_flag(
    name = "verbose",
    build_setting_default = False,
    visibility = ["//visibility:public"]
)

config_setting(
    name = "verbose?",
    values = {"verbose": "True"}
)

run_repl(
    name = "repl",
)

run_tool(
    name = "dumpobj",
    tool = "//tools:dumpobj",
    arg  = ":arg",
)

run_tool(
    name = "ocamlcmt",
    tool = "//tools:ocamlcmt",
    arg  = ":arg",
)

run_tool(
    name = "ocamlobjinfo",
    tool = "//tools:ocamlobjinfo",
    arg  = ":arg",
)

run_tool(
    name = "primreq",
    tool = "//tools:primreq",
    arg  = ":arg",
)


################################################################
build_test(
    name = "toolchain",
    targets = [
        ## boot stuff
        "//runtime:camlrun",
        "//runtime:asmrun",
        "//lex:ocamllex",
        "//yacc:ocamlyacc",
        "//stdlib",

        # "//boot/baseline:ocamlc.byte",
        # "//boot/baseline:ocamlopt.byte",
        # "//boot/baseline:ocamllex",
        # "//boot/baseline:ocamlc.opt",
        # "//boot/baseline:ocamlopt.opt",

        # ":Caml_tex",
        "//tools:cmpbyt",
        # ":dumpobj",   ## sys target only
        # ":Eqparsetree",
        "//tools:ocamlobjinfo",
        "//tools:ocamlcmt",
        "//tools:ocamlcp",
        "//tools:ocamldep",
        "//tools:ocamlmklib",
        "//tools:ocamlmktop",
        "//tools:ocamloptp",
        "//tools:ocamlprof",
        "//tools:primreq",
        "//tools:stripdebug",
    ]
)

