load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_skylib//rules:common_settings.bzl",
     "bool_flag", "string_flag")

load("//bzl:rules.bzl", "run_tool", "run_repl")

exports_files(["Makefile.config", "VERSION", "BUILD.bazel"])

label_flag(name = "arg",
           build_setting_default = "BUILD.bazel",
           visibility = ["//visibility:public"])

bool_flag(
    name = "verbose",
    build_setting_default = False,
    visibility = ["//visibility:public"]
)

config_setting(
    name = "verbose?",
    values = {"verbose": "True"}
)

run_repl(
    name = "repl",
)

run_tool(
    name = "dumpobj",
    tool = "//tools:dumpobj",
    arg  = ":arg",
)

run_tool(
    name = "ocamlcmt",
    tool = "//tools:ocamlcmt",
    arg  = ":arg",
)

run_tool(
    name = "ocamlobjinfo",
    tool = "//tools:ocamlobjinfo",
    arg  = ":arg",
)

run_tool(
    name = "primreq",
    tool = "//tools:primreq.opt",
    arg  = ":arg",
)



