load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_skylib//rules:common_settings.bzl",
     "bool_flag", "string_flag")

load("//tools:TOOL_RUNNERS.bzl",
     "run_ocamlcmt",
     "run_ocamldep",
     "run_tool",
     "run_repl")

exports_files(["Makefile.config", "VERSION", "BUILD.bazel"])

label_flag(name = "arg",
           build_setting_default = "BUILD.bazel",
           visibility = ["//visibility:public"])

bool_flag(
    name = "verbose",
    build_setting_default = False,
    visibility = ["//visibility:public"]
)

config_setting(
    name = "verbose?",
    values = {"verbose": "True"}
)

run_repl(
    name = "repl",
)

run_tool(
    name = "dumpobj",
    tool = "//tools:dumpobj",
    arg  = ":arg",
)

run_ocamlcmt(
    name = "cmt",
    tool = "@baseline//bin:ocamlcmt.opt",
    arg  = ":arg",
)

run_ocamldep(
    name = "deps",
    tool = "@baseline//bin:ocamldep.opt",
    # tool = ":ocamldep.opt"
)

# run_tool(
#     name = "deps",
#     tool = "@baseline//bin:ocamldep.opt",
#     arg  = ":arg",
# )

run_tool(
    name = "lso",
    tool = "@baseline//bin:ocamlobjinfo.opt",
    arg  = ":arg",
)
run_tool(
    name = "ocamlobjinfo",
    tool = "@baseline//bin:ocamlobjinfo.opt",
    # tool = "//tools:ocamlobjinfo",
    arg  = ":arg",
)

run_tool(
    name = "primreq",
    tool = "//tools:primreq.opt",
    arg  = ":arg",
)



